ajuste to título da interface

--- a/projetos/templates/projetos/bancas_index.html
+++ b/projetos/templates/projetos/bancas_index.html
@@ -114,8 +114,9 @@
 
 {% block content %}
 
-  <h3>Bancas</h3>
+  <span class="titulo">Bancas</span>
   <br>
+
   <div class="wrap">
       <div class="one">
         <br><br>
