--- a/projetos/templates/projetos/calendario.html
+++ b/projetos/templates/projetos/calendario.html
@@ -70,7 +70,7 @@
 
   <div id="tudo">
 
-    <h3>Calendário de Eventos do PFE</h3>
+    <span class="titulo">Calendário de Eventos do PFE</span>
     <br>
     
     <div id='calendar'></div>
