--- a/projetos/templates/projetos/certificados_submetidos.html
+++ b/projetos/templates/projetos/certificados_submetidos.html
@@ -27,7 +27,9 @@
 {% endblock %}
 
 {% block content %}
-  <h3>Cerfificados</h3>
+
+  <span class="titulo">Cerfificados</span>
+  <br>
 
   {% comment %}
   <select onchange="location = this.options[this.selectedIndex].value;">
