--- a/projetos/templates/projetos/graficos.html
+++ b/projetos/templates/projetos/graficos.html
@@ -43,7 +43,7 @@
 
     <div class="2areas2">
         <br>
-        <h3>Gráficos do PFE</h3>
+        <span class="titulo">Gráficos do PFE</span>
 
         {% comment %} 
         {% for estudante in estudantes %}
