--- a/projetos/templates/projetos/histograma.html
+++ b/projetos/templates/projetos/histograma.html
@@ -23,7 +23,8 @@
 
 {% block content %}
 
-  <h3>Procura pela Propostas de Projetos</h3>
+  <span class="titulo">Procura pela Propostas de Projetos</span>
+  <br>
 
   <label for="filter">Edição:</label>
   <select id="filter" class="filter" data-tableId="projetos"
