--- a/projetos/templates/projetos/import.html
+++ b/projetos/templates/projetos/import.html
@@ -9,7 +9,10 @@
 {% endblock %}
 
 {% block content %}
-  <h4>Carregamento de CSV (Comma Separated Values)</h4>
+
+  <span class="titulo">Carregamento de CSV (Comma Separated Values)</span>
+  <br>
+
   <strong>(realmente separado por vírgula, não funciona com ponto e vírgula)</strong>
   <br><br>
   <h6>Campos Permitidos:</h6>
