--- a/projetos/templates/projetos/mapeamento_estudante_projeto.html
+++ b/projetos/templates/projetos/mapeamento_estudante_projeto.html
@@ -58,7 +58,9 @@
 {% endblock %}
 
 {% block content %}
-  <h3>Mapeamento de Propostas de Projetos por Estudante</h3>
+
+  <span class="titulo">Mapeamento de Propostas de Projetos por Estudante</span>
+  <br>
 
   <label for="filter">Edição:</label>
   <select id="filter" onchange="location = this.options[this.selectedIndex].value;">
