--- a/projetos/templates/projetos/montar_grupos.html
+++ b/projetos/templates/projetos/montar_grupos.html
@@ -78,10 +78,8 @@
     <br>
   {% endif %}
 
-  <h2>Montar Grupos</h2>
+  <span class="titulo">Montar Grupos</span>
   <br>
-
-
 
   {% comment %}
   <label for="filter">Edição:</label>
