--- a/projetos/templates/projetos/mostra_feedback.html
+++ b/projetos/templates/projetos/mostra_feedback.html
@@ -19,7 +19,8 @@
 
 {% block content %}
 
-  <h5>Feedback de Organizações Parceiras</h5><br>
+  <span class="titulo">Feedback de Organizações Parceiras</span>
+  <br>
 
   Nome: {{feedback.nome}}<br>
   e-mail: {{feedback.email}}<br>
