--- a/projetos/templates/projetos/organizacoes_lista.html
+++ b/projetos/templates/projetos/organizacoes_lista.html
@@ -10,8 +10,10 @@
 {% endblock %}
 
 {% block content %}
-  <h3>Organizações Parceiras</h3>
+
+  <span class="titulo">Organizações Parceiras</span>
   <br>
+
   {% if organizacoes_list %}
     <table id="OrganizacoesTable">
       <tr>
