--- a/projetos/templates/projetos/organizacoes_prospectadas.html
+++ b/projetos/templates/projetos/organizacoes_prospectadas.html
@@ -23,7 +23,10 @@
 {% endblock %}
 
 {% block content %}
-  <h3>Organizações prospectadas nos últimos 3 mêses</h3>
+
+  <span class="titulo">Organizações prospectadas nos últimos 3 mêses</span>
+  <br>
+
   <label for="filter">Filtrar:</label>
   <select id="filter" class="filter" data-tableId="OrganizacoesTable">
     <option value="todas">todas contactadas</option>
