--- a/projetos/templates/projetos/relatorio_alunos.html
+++ b/projetos/templates/projetos/relatorio_alunos.html
@@ -16,7 +16,7 @@
 
 {% block content %}
     
-    <h3>Estudantes - PFE {{configuracao.ano}}.{{configuracao.semestre}}</h3>
+    <span class="titulo">Estudantes - PFE {{configuracao.ano}}.{{configuracao.semestre}}</span>
     <br>
 
     {% if alunos %}
