--- a/projetos/templates/projetos/relatorio_feedbacks.html
+++ b/projetos/templates/projetos/relatorio_feedbacks.html
@@ -15,8 +15,10 @@
 {% endblock %}
 
 {% block content %}
-  <h3>Feedbacks</h3>
-  <br>  
+
+  <span class="titulo">Feedbacks</span>
+  <br>
+
   {% if feedbacks %}
     {% for feedback in feedbacks %} 
       <p style="page-break-before: always"></p>
