--- a/projetos/templates/projetos/relatorio_projetos.html
+++ b/projetos/templates/projetos/relatorio_projetos.html
@@ -16,7 +16,7 @@
 
 {% block content %}
     
-    <h3>Projetos Disponíveis - PFE {{configuracao.ano}}.{{configuracao.semestre}}</h3>
+    <span class="titulo">Projetos Disponíveis - PFE {{configuracao.ano}}.{{configuracao.semestre}}</span>
     <br>
 
     {% if projetos %}
