--- a/projetos/templates/projetos/todos_professores.html
+++ b/projetos/templates/projetos/todos_professores.html
@@ -11,7 +11,10 @@
 {% endblock %}
 
 {% block content %}
-  <h3>Professores</h3>
+  
+  <span class="titulo">Professores</span>
+  <br>
+
   {% if professores %}
     <table id="OrganizacoesTable">
       <tr>
