--- a/users/templates/users/alunos_lista.html
+++ b/users/templates/users/alunos_lista.html
@@ -18,7 +18,9 @@
 {% endblock %}
 
 {% block content %}
-  <h3>Estudantes</h3>
+  
+  <span class="titulo">Estudantes</span>
+  <br>
 
   <label for="filter"><b>Edição:</b></label>
   <select onchange="location = this.options[this.selectedIndex].value;">
