--- a/users/templates/users/parceiro_detail.html
+++ b/users/templates/users/parceiro_detail.html
@@ -19,7 +19,10 @@
 {% endblock %}
 
 {% block content %}
-  <h3>{{parceiro.user.get_full_name}}</h3>
+  
+  <span class="titulo">{{parceiro.user.get_full_name}}</span>
+  <br>
+
   {% if not parceiro.user.is_active %}
       <p style="color: red;">
           - NÃO ATIVO -
