--- a/projetos/templates/projetos/avisos_listar.html
+++ b/projetos/templates/projetos/avisos_listar.html
@@ -18,7 +18,9 @@
 {% endblock %}
 
 {% block content %}
-  <h3>Avisos</h3>
+
+  <span class="titulo">Avisos</span>
+  <br>
 
   <label for="filter">Filtro:</label>
   <select id="cxi" class="filter" data-tableId="projetos">
