--- a/projetos/templates/projetos/distribuicao_areas.html
+++ b/projetos/templates/projetos/distribuicao_areas.html
@@ -42,7 +42,7 @@
 
     <div class="2areas2" style="line-height: 1.3;">
         <ul class="chart">
-        <h4><li class="title" title="Tendência de Áreas de Interesse ({{tipo}})"></li></h4>
+        <span class="titulo"><li class="title" title="Tendência de Áreas de Interesse ({{tipo}})"></li></span>
         <li></li>
         <li></li>
 
