--- a/projetos/templates/projetos/lista_feedback.html
+++ b/projetos/templates/projetos/lista_feedback.html
@@ -13,12 +13,13 @@
 
   {% url 'projeto_feedback' as feedback_url%}
 
-  <h5>Listagem de Feedbacks das Organizações Parceiras</h5>
+  <span class="titulo">Listagem de Feedbacks das Organizações Parceiras</span>
+  <br>
   Link para pesquisa: <a href="{{ feedback_url }}">{{ SERVER_URL }}{{ feedback_url }}</a><br><br>
   
   <!-- VER: https://stackoverflow.com/questions/53202862/trying-to-sort-tables-with-w3-js-but-its-not-sorting-numbers-properly -->
 
-{% if feedbacks %}
+  {% if feedbacks %}
     <table id="FeedbacksTable">
       <tr>
         <th>ver</th>
