--- a/projetos/templates/projetos/organizacoes_tabela.html
+++ b/projetos/templates/projetos/organizacoes_tabela.html
@@ -16,8 +16,10 @@
 {% endblock %}
 
 {% block content %}
-  <h3>Alocação de Organizações Parceiras</h3>
+
+  <span class="titulo">Alocação de Organizações Parceiras</span>
   <br>
+
   {% for organizacoes,periodo in anos %} 
     <big>{{periodo}}</big>
     <table id="organizacoes">
