--- a/projetos/templates/projetos/parceiro_propostas.html
+++ b/projetos/templates/projetos/parceiro_propostas.html
@@ -11,9 +11,9 @@
 {% endblock %}
 
 {% block content %}
-  <h3>
-    Propostas de Projetos Submetidas
-  </h3>
+
+  <span class="titulo">Propostas de Projetos Submetidas</span>
+  <br>
 
   {% if propostas %}
     <table id="PropostasTable">
