--- a/projetos/templates/projetos/professores_tabela.html
+++ b/projetos/templates/projetos/professores_tabela.html
@@ -16,8 +16,10 @@
 {% endblock %}
 
 {% block content %}
-  <h3>Alocação de Orientadores</h3>
+
+  <span class="titulo">Alocação de Orientadores</span>
   <br>
+
   {% for professores,periodo in anos %} 
   <big>{{periodo}}</big>
   <table id="professores">
