--- a/projetos/templates/projetos/projeto_completo.html
+++ b/projetos/templates/projetos/projeto_completo.html
@@ -37,12 +37,12 @@
 {% block content %}
   {% if projeto.titulo_final %}
     <style>
-        h3 {display: inline;}
+        .titulo {display: inline;}
     </style>
-    <h3>Título: {{projeto.titulo_final}}</h3>
+    <span class="titulo">Título: {{projeto.titulo_final}}</span>
     <small> <br>&nbsp;&nbsp;&nbsp;&nbsp;Título Provisório: {{projeto.titulo}}</small><br>
   {% else %}
-    <h3>Título: {{projeto.titulo}}</h3>
+    <span class="titulo">Título: {{projeto.titulo}}</span>
   {% endif %}
   <strong>Semestre:</strong> {{projeto.ano}}.{{projeto.semestre}}<br>
   {% if projeto.avancado %}
