--- a/projetos/templates/projetos/projeto_detalhes.html
+++ b/projetos/templates/projetos/projeto_detalhes.html
@@ -18,19 +18,19 @@
 
   {% if projeto.titulo_final %}
     <style>
-        h5 {display: inline;}
+        .titulo {display: inline;}
     </style>
-    <h5 data-toggle="tooltip" data-html="true" animation="true" title="
+    <span class="titulo" data-toggle="tooltip" data-html="true" animation="true" title="
      Título do projeto.
     ">
-      Título: {{projeto.titulo_final}}</h5>
+      Título: {{projeto.titulo_final}}</span>
     <small> <br>&nbsp;&nbsp;&nbsp;&nbsp;Título Provisório: {{projeto.titulo}}</small><br>
   {% elif projeto.titulo %}
-    <h5  data-toggle="tooltip" data-html="true" animation="true" title="
+    <span class="titulo" data-toggle="tooltip" data-html="true" animation="true" title="
      Título do projeto.
-    ">Título: {{projeto.titulo}}<br></h5>
+    ">Título: {{projeto.titulo}}<br></span>
   {% else %}
-    <h5>Problema na identificação do título<br></h5>
+    <span class="titulo">Problema na identificação do título<br></span>
   {% endif %}
 
   <br>
