--- a/projetos/templates/projetos/selecao_propostas.html
+++ b/projetos/templates/projetos/selecao_propostas.html
@@ -22,8 +22,9 @@
 
     {% endif %}
     
-    <h3>Propostas de Projetos Disponíveis</h3>
-
+    <span class="titulo">Propostas de Projetos Disponíveis</span>
+    <br>
+    
     {% if propostas %}
       <form action="" method="post"> {% csrf_token %}
         {% if liberadas_propostas %}
