--- a/projetos/templates/projetos/selecionar_orientadores.html
+++ b/projetos/templates/projetos/selecionar_orientadores.html
@@ -21,7 +21,7 @@
     <br>
   {% endif %}
 
-  <h3>Selecionar Orientadores</h3>
+  <span class="titulo">Selecionar Orientadores</span>
   <br>
 
   {% comment %}
