--- a/projetos/templates/projetos/tabela_documentos.html
+++ b/projetos/templates/projetos/tabela_documentos.html
@@ -18,7 +18,7 @@
 
 {% block content %}
 
-  <h3>Documentação dos Projetos Fechados</h3>
+  <span class="titulo">Documentação dos Projetos Fechados</span>
   <br>
 
   {% if mylist %}
