--- a/projetos/templates/projetos/todos_parceiros.html
+++ b/projetos/templates/projetos/todos_parceiros.html
@@ -10,7 +10,10 @@
 {% endblock %}
 
 {% block content %}
-  <h3>Parceiros Profissionais</h3>
+
+  <span class="titulo">Parceiros Profissionais</span>
+  <br>
+
   {% if pareceiros %}
     <table id="ParceirosTable">
       <tr>
