--- a/users/templates/users/aluno_detail.html
+++ b/users/templates/users/aluno_detail.html
@@ -10,7 +10,10 @@
 {% endblock %}
 
 {% block content %}
-  <h3>{{aluno.user.get_full_name}}</h3>
+  
+  <span class="titulo">{{aluno.user.get_full_name}}</span>
+  <br>
+
   <strong>e-mail:</strong> <a href="mailto:{{aluno.user.email}}"> &lt;{{aluno.user.email}}&gt;</a><br>
   {% if aluno.user.linkedin %}
     <strong>LinkedIn:</strong> <a href="{{aluno.user.linkedin}}" target="_blank">{{aluno.user.linkedin}}</a><br>
