--- a/users/templates/users/areas_interesse.html
+++ b/users/templates/users/areas_interesse.html
@@ -11,7 +11,9 @@
         <h2 class="red-bold">{{mensagem}}</h2>
     {% endif %}
 
-    <h3>Áreas de Interesse</h3>
+    <span class="titulo">Áreas de Interesse</span>
+    <br>
+
     <form method="post">
         {% csrf_token %}
         {% with aa=aluno.user.areadeinteresse_set.all %}
