--- a/users/templates/users/professor_detail.html
+++ b/users/templates/users/professor_detail.html
@@ -6,7 +6,10 @@
 {% endcomment %}
 
 {% block content %}
-  <h3>{{professor.user.get_full_name}}</h3>
+  
+  <span class="titulo">{{professor.user.get_full_name}}</span>
+  <br>
+
   <strong>Regime de Dedicação:</strong>
   {% if professor.dedicacao %}
     {{professor.dedicacao}}
