--- a/projetos/templates/projetos/distribuicao_areas.html
+++ b/projetos/templates/projetos/distribuicao_areas.html
@@ -40,11 +40,12 @@
     </select>
     <br>
 
+    <span class="titulo">Tendência de Áreas de Interesse ({{tipo}})</span>
+    <div style="line-height:80%;"><br></div>
+
     <div class="2areas2" style="line-height: 1.3;">
         <ul class="chart">
-        <span class="titulo"><li class="title" title="Tendência de Áreas de Interesse ({{tipo}})"></li></span>
-        <li></li>
-        <li></li>
+        
 
         {% for key, value in areaspfe.items %}
             <span
