melhor nome para botão

--- a/projetos/templates/projetos/submissao.html
+++ b/projetos/templates/projetos/submissao.html
@@ -68,7 +68,7 @@ textarea {
     <input type="text" size="80" id="linkedin" name="linkedin" {% if linkedin %}value="{{linkedin}}"{% endif %} placeholder="https://www.linkedin.com/" {% if vencido %}disabled{% endif %}><br>
 
     <br><br>
-    <input {% if vencido %}disabled{% endif %} type="submit" value="Enviar">
+    <input {% if vencido %}disabled{% endif %} type="submit" value="Atualizar">
 
   </form>
 
