--- a/users/templates/users/areas_interesse.html
+++ b/users/templates/users/areas_interesse.html
@@ -21,7 +21,7 @@
         {% endwith %}
         <p>&nbsp;</p>
         {% if not vencido %}
-            <button type="submit">Enviar</button>
+            <button type="submit">Atualizar</button>
         {% endif %}
         <p>&nbsp;</p>
     </form>
