Registro completo de professor

--- a/users/templates/users/professor_detail.html
+++ b/users/templates/users/professor_detail.html
@@ -27,8 +27,9 @@
   {% if professor.website %}
     <strong>website:</strong> <a href="{{ professor.website }}"> {{ professor.website }} </a><br>
   {% endif %}
-
-  
+  {% if professor.areas %}
+    <strong>Áreas de Interesse:</strong> {{ professor.areas }}<br>
+  {% endif %}
   
   {% if projetos %}
     <hr>
