Suporte a língua de comunicação para com usuário

--- a/projetos/templates/projetos/cadastra_usuario.html
+++ b/projetos/templates/projetos/cadastra_usuario.html
@@ -43,7 +43,13 @@
 
     <br><br>
 
-    <label for="linkedin">LinkedIn:</label><input type="text" size="73" maxlength="73" id="linkedin" name="linkedin" value="{{linkedin}}" placeholder="https://www.linkedin.com/"><br>
+    <label for="linkedin">LinkedIn:</label> <input type="text" size="73" maxlength="73" id="linkedin" name="linkedin" value="{{linkedin}}" placeholder="https://www.linkedin.com/"><br>
+
+    <br><label for="lingua">Língua</label>:
+    <select name="lingua" id="lingua" title="Linguagem">
+      <option value=1 selected>Português</option>  
+      <option value=2>Inglês</option>  
+    </select><br>
 
     {% comment %}
     <input type="checkbox" id="membro_comite" name="membro_comite" value="True">
