--- a/projetos/templates/projetos/propostas_lista.html
+++ b/projetos/templates/projetos/propostas_lista.html
@@ -109,21 +109,39 @@
   {% if propostas %}
     <table id="PropostasTable">
       <tr>
-        <th class="text-center">Fechado</th>
-        <th onclick="w3.sortHTML('#PropostasTable', '.item', 'td:nth-child(2)')" style="cursor:pointer" class="text-center">Projeto</th>
-        <th onclick="w3.sortHTML('#PropostasTable', '.item', 'td:nth-child(3)')" style="cursor:pointer" class="text-center">Período</th>
-        <th onclick="w3.sortHTML('#PropostasTable', '.item', 'td:nth-child(4)')" style="cursor:pointer" class="text-center">Organização</th>
-        <th>Aluno1</th>
-        <th>Aluno2</th>
-        <th>Aluno3</th>
-        <th>Aluno4</th>
+        <th class="text-center" style="font-size: 12px;" data-toggle="tooltip" data-html="true" animation="true" title="Algum professor autorizou que o projeto seja publicado para os estudantes">Autorizado</th>
+        <th class="text-center" style="font-size: 12px;" data-toggle="tooltip" data-html="true" animation="true" title="A proposta se encontra disponível para os alunos aplicarem">Disponível</th>
+        <th class="text-center" style="font-size: 12px;" data-toggle="tooltip" data-html="true" animation="true" title="Foi formado um grupo de alunos para essa proposta de projeto">Fechado</th>
+        <th onclick="w3.sortHTML('#PropostasTable', '.item', 'td:nth-child(2)')" style="cursor:pointer; font-size: 14px;" class="text-center"  >Projeto</th>
+        <th onclick="w3.sortHTML('#PropostasTable', '.item', 'td:nth-child(3)')" style="cursor:pointer; font-size: 14px;" class="text-center">Período</th>
+        <th onclick="w3.sortHTML('#PropostasTable', '.item', 'td:nth-child(4)')" style="cursor:pointer; font-size: 14px;" class="text-center">Organização</th>
+        <th style="font-size: 14px;">Aluno1</th>
+        <th style="font-size: 14px;">Aluno2</th>
+        <th style="font-size: 14px;">Aluno3</th>
+        <th style="font-size: 14px;">Aluno4</th>
       </tr>      
       {% for proposta in propostas %} 
       {% with disponivel=proposta.disponivel %}
       
         <tr class="item">
 
-          {% if disponivel %}<script>publicados += 1</script>{% endif %}
+          {% if proposta.autorizado  %}
+            <td class="text-success"  style="text-align:center">
+          {% else %}
+            <td class="text-danger"  style="text-align:center">
+          {% endif %}
+            &#x2B24;
+          </td>
+
+          {% if disponivel %}
+            <script>publicados += 1</script>
+            <td class="text-success"  style="text-align:center">
+          {% else %}
+            <td class="text-danger"  style="text-align:center">
+          {% endif %}
+            &#x2B24;
+          </td>
+
           {% if proposta.fechada  %}
             <td class="text-success"  style="text-align:center">
               <script>fechados += 1</script>
@@ -132,9 +150,10 @@
           {% endif %}
             &#x2B24;
           </td>
+
+
           <td>
           
-            {% if not disponivel %}<del>{% endif %}
             <a href="{% url 'proposta_completa' proposta.id %}"
               data-toggle="tooltip" data-html="true" animation="true" title="
               {% for opcaop in proposta.opcao_set.all %}
@@ -173,31 +192,24 @@
                 {{proposta.titulo}}
               {% endif %}
             </a>
-            {% if not disponivel %}</del>{% endif %}
+            
           </td>
 
           <td class="text-center">
-            {% if not disponivel %}<del>{% endif %}
-              {{proposta.ano}}.{{proposta.semestre}}
-            {% if not disponivel %}</del>{% endif %}
+            {{proposta.ano}}.{{proposta.semestre}}
           </td>
           <td>
-            {% if not disponivel %}<del>{% endif %}
-              {% if proposta.organizacao %}
-                <a href="{% url 'organizacao_completo' proposta.organizacao.id %}">
-                  {{ proposta.organizacao.nome }}
-                </a>
-              {% elif proposta.nome_organizacao %}
-                {{ proposta.nome_organizacao }}
-              {% else %}
-                Organização não definida.
-              {% endif %}
-            {% if not disponivel %}</del>{% endif %}
+            {% if proposta.organizacao %}
+              <a href="{% url 'organizacao_completo' proposta.organizacao.id %}">
+                {{ proposta.organizacao.nome }}
+              </a>
+            {% elif proposta.nome_organizacao %}
+              {{ proposta.nome_organizacao }}
+            {% else %}
+              Organização não definida.
+            {% endif %}
           </td>
           <td class="text-center">
-            {% if not disponivel %}
-              <del>
-            {% endif %}
             {% if proposta.perfil_aluno1_computacao %}C<script>tmp_computacao += 1</script>{% endif %}
             {% if proposta.perfil_aluno1_mecatronica %}X<script>tmp_mecatronica += 1</script>{% endif %}
             {% if proposta.perfil_aluno1_mecanica %}M<script>tmp_mecanica += 1</script>{% endif %}
@@ -212,14 +224,8 @@
                 ?
               {% endif %}
             {% endif %}
-            {% if not disponivel %}
-              </del>
-            {% endif %}
           </td>
           <td class="text-center">
-            {% if not disponivel %}
-              <del>
-            {% endif %}
             {% if proposta.perfil_aluno2_computacao %}C<script>tmp_computacao += 1</script>{% endif %}
             {% if proposta.perfil_aluno2_mecatronica %}X<script>tmp_mecatronica += 1</script>{% endif %}
             {% if proposta.perfil_aluno2_mecanica %}M<script>tmp_mecanica += 1</script>{% endif %}
@@ -234,14 +240,8 @@
                 ?
               {% endif %}
             {% endif %}
-            {% if not disponivel %}
-              </del>
-            {% endif %}
           </td>
           <td class="text-center">
-            {% if not disponivel %}
-              <del>
-            {% endif %}
             {% if proposta.perfil_aluno3_computacao %}C<script>tmp_computacao += 1</script>{% endif %}
             {% if proposta.perfil_aluno3_mecatronica %}X<script>tmp_mecatronica += 1</script>{% endif %}
             {% if proposta.perfil_aluno3_mecanica %}M<script>tmp_mecanica += 1</script>{% endif %}
@@ -256,14 +256,8 @@
                 ?
               {% endif %}
             {% endif %}
-            {% if not disponivel %}
-              </del>
-            {% endif %}
           </td>
           <td class="text-center">
-            {% if not disponivel %}
-              <del>
-            {% endif %}
             {% if proposta.perfil_aluno4_computacao %}C<script>tmp_computacao += 1</script>{% endif %}
             {% if proposta.perfil_aluno4_mecatronica %}X<script>tmp_mecatronica += 1</script>{% endif %}
             {% if proposta.perfil_aluno4_mecanica %}M<script>tmp_mecanica += 1</script>{% endif %}
@@ -276,9 +270,6 @@
               {% else %}
                 ?
               {% endif %}
-            {% endif %}
-            {% if not disponivel %}
-              </del>
             {% endif %}
           </td>
         </tr>
