--- a/projetos/templates/projetos/propostas_lista.html
+++ b/projetos/templates/projetos/propostas_lista.html
@@ -103,7 +103,7 @@
     <option value="antigos" {% if periodo == "antigos" %}selected="selected"{% endif %}>antigos</option>
     <option value="atuais" {% if periodo == "atuais" %}selected="atuais"{% endif %}>atuais</option>
     <option value="disponiveis" {% if periodo == "disponiveis" %}selected="disponiveis"{% endif %}>disponíveis</option>
-  </select>
+  </select> 
   <br><br>
 
   {% if propostas %}
@@ -373,7 +373,7 @@
 <div id="plot">
 </div>
 
-<script charset="UTF-8" src="http://cdnjs.cloudflare.com/ajax/libs/d3/3.1.6/d3.min.js"></script>
+<script charset="UTF-8" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.1.6/d3.min.js"></script>
 <!-- https://gist.github.com/widged/5780720 -->
 <script>
 (function() {
