--- a/projetos/templates/projetos/propostas_lista.html
+++ b/projetos/templates/projetos/propostas_lista.html
@@ -58,11 +58,11 @@
 		}
 
     line.tick-p, text.tick-p {
-			stroke: #008080;
+			stroke: #00A0A0;
 		}
 
     line.tick-y, text.tick-y {
-			stroke: #DEB887;
+			stroke: brown;
 		}
 
 		text.tick-text {
@@ -421,7 +421,7 @@ svg.append("circle")
 		.attr("cx", 200)
 		.attr("cy", 317)
     .attr("r", 7)
-    .attr("fill", "burlywood");
+    .attr("fill", "brown");
     
   svg.append("text")
     .attr("x", 210)
@@ -526,7 +526,7 @@ svg.append("circle")
 		.attr("cx", function (d) { return d[0]; })
 		.attr("cy", function (d) { return d[1]; })
     .attr("r", function (d) { return d[2]; })
-    .attr("fill", "burlywood");
+    .attr("fill", "brown");
     
   circles_pendentes.enter().append("text")
     .attr("x", function (d) { return d[0]+d[2]; })
