--- a/projetos/templates/projetos/meuprojeto_aluno.html
+++ b/projetos/templates/projetos/meuprojeto_aluno.html
@@ -9,66 +9,21 @@
 
   {% if aluno.alocacao_set.all.count > 0 %}
 
-    <span class="titulo">Projeto Alocado</span>
-    <br>
+    <span class="titulo">Projeto(s) Alocado(s)</span>
+    <br><br>
 
     {% for alocado in aluno.alocacao_set.all %}
 
       <h4>[{{alocado.projeto.ano}}.{{alocado.projeto.semestre}}]</h4>
       
-      {% if alocado.projeto.ano == configuracao.ano and alocado.projeto.semestre == configuracao.semestre and not configuracao.liberados_projetos %}
-
-        Projetos {{configuracao.ano}}.{{configuracao.semestre}} em fase de alocação.<br>
-
-      {% else %}
-  
-        {% if alocado.projeto.titulo_final %}
-          <style>
-              h3 {
-                  display: inline;
-              }
-          </style>
-          <h3>Título: {{alocado.projeto.titulo_final}}<br></h3>
-          <small>&nbsp;&nbsp;&nbsp;&nbsp;Título Provisório: {{alocado.projeto.titulo}}</small><br>
+      {% if alocado.projeto.ano > configuracao.ano or alocado.projeto.ano == configuracao.ano and alocado.projeto.semestre > configuracao.semestre %}
+        {% if not configuracao.liberados_projetos %}
+          Projetos {{configuracao.ano}}.{{configuracao.semestre}} em fase de alocação.<br>
         {% else %}
-            <h3>Título: {{alocado.projeto.titulo}}<br></h3>
+          {% include "projeto.html" %}
         {% endif %}
-        <br>
-        
-        <strong>Descrição:</strong> {{alocado.projeto.proposta.descricao|linebreaks|urlize}}<br>
-
-        <strong>Expectativas de resultados/entregas :</strong> {{alocado.projeto.proposta.expectativas|linebreaks|urlize}}<br>
-
-        <strong>Recursos a serem disponibilizados aos Alunos :</strong> {{ alocado.projeto.proposta.recursos|linebreaks|urlize}}<br>
-        {% if alocado.projeto.proposta.observacoes %}
-          <strong>Outras observações :</strong> {{ alocado.projeto.proposta.observacoes|linebreaks|urlize}}<br>
-        {% endif %}
-
-        <hr>
-
-        <h4>Organização: {{ alocado.projeto.organizacao.nome }}<br></h4><br>
-        <strong>endereço:</strong> {{ alocado.projeto.organizacao.endereco|linebreaks }}<br>
-        <strong>website:</strong> <a href="{{ projeto.organizacao.website }}">{{ alocado.projeto.organizacao.website }}</a><br>
-
-        {% if alocado.projeto.orientador %}
-        <hr>
-        <h5>Orientador(a)<br></h5>
-        <ul>
-            <li><a href="mailto:{{alocado.projeto.orientador.user.email}}">{{ alocado.projeto.orientador.user.get_full_name}} &lt;{{alocado.projeto.orientador.user.email}}&gt; </a></li>
-        </ul>
-        {% endif %}
-
-        <hr>
-        <h5>Grupo</h5>
-        <ul>
-        {% for membro in alocado.projeto.alocacao_set.all %} 
-        <li><a href="mailto:{{membro.aluno.user.email}}">{{membro.aluno.user.get_full_name}} &lt;{{membro.aluno.user.email}}&gt; [{{ membro.aluno.get_curso_display }}]
-        </a></li>
-        {% endfor %}
-        </ul>
-        <br>
-        <br>
-
+      {% else %}
+        {% include "projeto.html" %}
       {% endif %}
 
     {% endfor %}
